fixed issue on smaller screens

--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
     width: 100%;
     height: 800px;
     text-align: center;
+    padding: 0px 90px 0px 90px;
 }
 
 .third-section {
@@ -87,18 +88,16 @@ body {
     border: 1px solid #ababab;
 }
 
-.project-thumbs{
-    margin-left: 200px;
-    margin-right: 200px;
-    margin-top: 100px;
-}
+
 
 .col-md-3 {
     margin-bottom: 50px;
+    margin-top: 50px;
+    padding: 0px;
 }
 
 .proj-img {
-    margin: 2px;
+    position: relative;
     border-radius: 10px;
 }
 
